unpackaged/main/default/objects/Referral_Sources__c/Referral_Sources__c.object-meta.xml
<CustomObject>
    <label>Referral Sources</label>
    <nameField>
        <label>Referral Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referral Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>