unpackaged/main/default/objects/Referral_Sources__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>This field will contain any account number specific to National Funding provided to us by the Referral Source.</description>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>