unpackaged/main/default/objects/Referral_Sources__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Referral Sources</relationshipLabel>
    <relationshipName>Referral_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>