unpackaged/main/default/objects/Referral_Sources__c/fields/Days_Referral_Valid__c.field-meta.xml
<CustomField>
    <fullName>Days_Referral_Valid__c</fullName>
    <description>This field will indicate the number of days that a referral is valid for.  It can be used as a comparison to determine if a referral action is warranted based on the referrer.</description>
    <label>Days Referral Valid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>