unpackaged/main/default/objects/Referral_Sources__c/fields/Default_Program__c.field-meta.xml
<CustomField>
    <fullName>Default_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to Identify that this Program is the default program the for related strategic partner account</description>
    <inlineHelpText>Used to Identify that this Program is the default program the for related Strategic Partner Account</inlineHelpText>
    <label>Default Program</label>
    <type>Checkbox</type>
</CustomField>