unpackaged/main/default/objects/Referral_Sources__c/fields/Off_Balance_New__c.field-meta.xml
<CustomField>
    <fullName>Off_Balance_New__c</fullName>
    <label>Off Balance - New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>