unpackaged/main/default/objects/Referral_Sources__c/fields/On_Balance_New__c.field-meta.xml
<CustomField>
    <fullName>On_Balance_New__c</fullName>
    <label>On Balance - New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>