unpackaged/main/default/objects/Referral_Sources__c/fields/Strategic_Partner__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Strategic Partner Acct, Strategic Partner - Customer Acct</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referral Sources</relationshipLabel>
    <relationshipName>Referral_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>